# aoc-2022

./: Cargo.toml
src/: lib.rs
