[package]
authors = ["twigoftilia <mattias@lindqvist.nu>"]
edition = "2021"
name = "aoc_2022"
version = "0.1.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array_tool = "1.0.3"
nalgebra = "0.31.1"
